fixed: coupon tag z-index right way

--- a/sass/components/_coupon.scss
+++ b/sass/components/_coupon.scss
@@ -434,6 +434,7 @@ h1+.coupon {
 		color: #fdfdfd;
 		&:before {
 			position: absolute;
+			z-index: 1;
 			top: 50%;
 			left: 50%;
 
